# my-custom-dotfiles

./: .bash_aliases.orig  .bashrc.bkp  .bashrc.orig  .pre-commit-config.yaml  .profile.orig  setup.cfg  setup.py  tox.ini  vscode_settings.json
