[metadata]
license = MIT
license_file = LICENSE
platforms = unix, linux, win32


[flake8]
########## Verbosity ##########

# Increase the verbosity of Flake8’s output.
verbose = 0
# Decrease the verbosity of Flake8’s output.
quiet = 0


################### FILE PATTERNS ##########################

# Provide a comma-separated list of glob patterns to exclude from checks.
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    docs/source/conf.py,
    old,
    build,
    dist


########## Options ##########

# Set the maximum length that any line (with some exceptions) may be.
max-line-length = 79

# Set the maximum allowed McCabe complexity value for a block of code.
max-complexity = 18

# incluences E131 and E133
hang-closing = True

# Specify a list of codes to ignore.
ignore =
    E203,
    E303,
    E266,
    E501,
    F403,
    F401,
    E131,
    E133

# Specify the list of error codes you wish Flake8 to report.
select =
    B,
    C,
    E,
    F,
    W,
    T4,
    B9
